Fix layout issues on tonmacron

--- a/front/style/_ton_macron.scss
+++ b/front/style/_ton_macron.scss
@@ -2,16 +2,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
-    min-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     background-position: center;
-    @media (max-height: 1000px) {
-        justify-content: flex-start;
-        height: auto;
-    }
 
     @media (max-width: $mobile) {
         background-color: white;
